[tool.poetry]
name = "pythonproject9"
version = "0.1.0"
description = ""
authors = ["dimapink <dima22082308@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
SQLAlchemy = "^2.0.30"
aiogram = "^3.6.0"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
